--- a/src/pages/testing/defects/advisory-details/advisory-details.html
+++ b/src/pages/testing/defects/advisory-details/advisory-details.html
@@ -5,7 +5,7 @@
         Cancel
       </button>
     </ion-buttons>
-    <ion-title>Advisory details</ion-title>
+    <ion-title margin-left>Advisory details</ion-title>
     <ion-buttons end>
       <button ion-button (click)="submitAdvisory()">
         <span>{{ isEdit ? 'Done' : 'Add Note' }}</span>
