--- a/src/pages/testing/defects/advisory-details/advisory-details.html
+++ b/src/pages/testing/defects/advisory-details/advisory-details.html
@@ -20,16 +20,16 @@
       <ion-item-divider padding-left>DEFECT ITEM</ion-item-divider>
       <ion-item no-lines padding-left>
         <ion-row class="advisory__item-status" ion-text color="dark" align-items-center justify-content-start>
-          {{ advisory.ref }}
+          {{ advisory.deficiencyRef }}
           <ion-badge item-end text-uppercase color="light">Advisory</ion-badge>
         </ion-row>
         <ion-row class="advisory_item-name" ion-text color="dark">
-          {{ advisory.metadata.item.itemDescription }}
+          {{ advisory.itemDescription }}
         </ion-row>
       </ion-item>
       <ion-item-divider padding-left>NOTES</ion-item-divider>
       <ion-item no-lines padding-horizontal>
-        <ion-textarea maxlength="200" rows="5" [(ngModel)]="advisory.notes" placeholder="Add Notes">
+        <ion-textarea maxlength="200" rows="5" [(ngModel)]="advisory.additionalInformation.notes" placeholder="Add Notes">
           Notes
         </ion-textarea>
       </ion-item>
