--- a/src/pages/testing/defects/advisory-details/advisory-details.html
+++ b/src/pages/testing/defects/advisory-details/advisory-details.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar hideBackButton="true">
     <ion-buttons start>
-      <button ion-button (click)="cancelAdvisory()" color="primary">
+      <button ion-button (click)="cancelAdvisory()" color="light">
         Cancel
       </button>
     </ion-buttons>
