fix(cvsb-15230): Implementation to disable ionic/cordorva splash screen

--- a/src/pages/testing/defects/advisory-details/advisory-details.html
+++ b/src/pages/testing/defects/advisory-details/advisory-details.html
@@ -38,7 +38,7 @@
         <ion-textarea
           maxlength="200"
           rows="5"
-          [(ngModel)]="advisory.additionalInformation.notes"
+          [(ngModel)]="advisory?.additionalInformation.notes"
           placeholder="Add Notes"
         >
           Notes
